# Nexsus-CLM

./: .cmd  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  main.py
app/api/: analysis.py  analytics.py  auth.py  contracts.py  extraction.py  guidelines.py
app/core/: clause_extractor.py  dynamic_schema.py  embedding.py  llm.py  risk_analyzer.py
app/db/: engine.py  models.py  seed.py
app/schemas/: analysis.py  analytics.py  auth.py
app/security/: auth.py
app/ui/: api_client.py  gradio_app.py
docs/: power-bi-guide.md
scripts/: generate_test_pdf.py  test_embedding_type.py  test_negative.py  test_pgvector.py  test_phase3.py  test_upload.py
