[project]
name = "nexus-clm"
version = "0.1.0"
description = "Autonomous Post-Signature Contract Intelligence & Integration Engine"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "sqlmodel>=0.0.22,<1.0",
    "asyncpg>=0.30,<1.0",
    "psycopg2-binary>=2.9,<3.0",
    "pgvector>=0.3,<1.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "alembic>=1.14,<2.0",
    "langchain>=0.3,<1.0",
    "langchain-openai>=0.3,<1.0",
    "langgraph>=0.2,<1.0",
    "instructor>=1.7,<2.0",
    "openai>=1.55,<2.0",
    "pypdf>=5.2,<6.0",
    "python-dotenv>=1.0,<2.0",
    "pydantic>=2.10,<3.0",
    "pydantic-settings>=2.7,<3.0",
    "httpx>=0.28,<1.0",
    "python-multipart>=0.0.19,<1.0",
    "gradio>=5.15,<6.0",
    "tenacity>=9.0,<10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "pytest-cov>=6.0",
    "ruff>=0.9",
]
